force-app/main/default/objects/SF_Okta_Field_Mapping__mdt/SF_Okta_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>SF Okta Field Mapping</label>
    <pluralLabel>SF Okta Field Mappings</pluralLabel>
</CustomObject>