force-app/main/default/objects/SF_Okta_Field_Mapping__mdt/fields/Common_Field__c.field-meta.xml
<CustomField>
    <fullName>Common_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Common Field</label>
    <type>Checkbox</type>
</CustomField>