force-app/main/default/objects/SF_Okta_Field_Mapping__mdt/fields/isPartner_Field__c.field-meta.xml
<CustomField>
    <fullName>isPartner_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPartner Field?</label>
    <type>Checkbox</type>
</CustomField>