force-app/main/default/objects/SF_Okta_Field_Mapping__mdt/fields/Okta_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Okta_Field_API_Name__c</fullName>
    <label>Okta Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>