force-app/main/default/objects/SF_Okta_Field_Mapping__mdt/fields/SF_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SF_Field_API_Name__c</fullName>
    <label>SF Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>