force-app/main/default/objects/SF_Okta_Field_Mapping__mdt/listViews/view_all.listView-meta.xml
<ListView>
    <fullName>view_all</fullName>
    <columns>SF_Field_API_Name__c</columns>
    <columns>Okta_Field_API_Name__c</columns>
    <columns>Common_Field__c</columns>
    <columns>isPartner_Field__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>view all</label>
</ListView>